add change title & category logic
