# backend/docs/swagger.yaml
@@ -69,6 +69,18 @@ paths:
       responses: {}
       tags:
       - Streams
+  /streams/edit-stream/:playbackId:
+    patch:
+      description: Edit the title of a live stream
+      parameters:
+      - description: Playback ID of the stream
+        in: path
+        name: playbackId
+        required: true
+        type: string
+      responses: {}
+      tags:
+      - Streams
   /streams/feed:
     get:
       description: Get the feed for the home page
